--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>Jonathan Cremin &ndash; {{ page.title }}</title>
+  <title>Swaroop Vattam &ndash; {{ page.title }}</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -22,7 +22,7 @@
 
     <footer>
       <hr />
-      Design and content &copy; Jonathan Cremin &ndash; <a href="https://github.com/kudos/crem.in">Fork the design on Github</a>.
+      Maintained by: Swaroop Vattam &ndash; <a href="https://github.com/kudos/crem.in">Fork the design on Github</a>.
     </footer>
   </div>
 
