--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 
     <footer>
       <hr />
-      Maintained by: Swaroop Vattam &ndash; <a href="https://github.com/kudos/crem.in">Fork the design on Github</a>.
+      Maintained by: Swaroop Vattam &ndash; <a href="https://github.com/kudos/crem.in">Forked from this design on Github</a>.
     </footer>
   </div>
 
