--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <header>
-  <h2><a href="/">Jonathan Cremin</a></h2>
+  <h2><a href="/">Swaroop Vattam</a></h2>
 </header>
 
 <hr />
@@ -16,12 +16,6 @@ layout: default
 </div>
 
 <hr />
-
-<div id="about">
-  I'm a software engineer living in Dublin and working at <a href="https://www.udemy.com">Udemy</a>.
-  I build stuff for Mac, iOS, and the web, like <a href="https://hostr.co">Hostr</a> and <a href="https://match.audio">Match Audio</a>.
-  Want to get in touch? Email <a href="mailto:jonathan@crem.in">jonathan@crem.in</a> or tweet <a href="https://twitter.com/kudoz">@kudoz</a>.
-</div>
 
 <hr />
 
